[tool.poetry]
name = "aiojira"
version = "0.1.14"
description = "Asynchronous Jira library"
authors = ["Roman Inflianskas <r.inflyanskas@zmeke.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["jira", "async", "asyncio"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/rominf/aiojira"

[tool.poetry.dependencies]
python = "^3.6"
jira = "^2.0"
poetry-version = "^0.1.2"
aioify = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
